--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ notifications:
   # - julia -e 'Pkg.clone(pwd()); Pkg.build("Robotlib"); Pkg.test("Robotlib"; coverage=true)'
 
 
-julia -e 'Pkg.clone(pwd())'
-julia -e 'Pkg.build("Robotlib")'
-if [ -f test/runtests.jl ]; then
-  julia --check-bounds=yes -e 'ENV["PYTHON"]=""; Pkg.build("PyCall"); Pkg.test("Robotlib", coverage=true)'
-fi
+- julia -e 'Pkg.clone(pwd())'
+- julia -e 'Pkg.build("Robotlib")'
+- if [ -f test/runtests.jl ]; then
+-  julia --check-bounds=yes -e 'ENV["PYTHON"]=""; Pkg.build("PyCall"); Pkg.test("Robotlib", coverage=true)'
+- fi
