--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ os:
   - linux
   - osx
 julia:
-  - 0.4
-  - 0.5
+  - release
   - nightly
+matrix:
+  allow_failures:
+    - julia: nightly
 notifications:
   email: false
 env:
