--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ env:
 #script:
   # - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
   # - julia -e 'Pkg.clone(pwd()); Pkg.build("Robotlib"); Pkg.test("Robotlib"; coverage=true)'
+after_success:
   # push coverage results to Coveralls
   - julia -e 'cd(Pkg.dir("Robotlib")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
