--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Robotlib"
 uuid = "a75dfa10-1339-53f3-8748-4d618c3d76af"
 authors = ["baggepinnen <baggepinnen@gmail.com>"]
-version = "0.4.1"
+version = "0.4.0"
 
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
@@ -27,6 +27,7 @@ StaticArrays = "<0.13"
 StatsBase = "<0.33"
 TotalLeastSquares = "1.0"
 julia = "1.0"
+Requires = "1.0"
 
 [extras]
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
