--- a/Project.toml
+++ b/Project.toml
@@ -19,12 +19,12 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TotalLeastSquares = "028f657a-7ace-5159-a694-8cfd97933b0c"
 
 [compat]
-DataFrames = "<0.20"
-MAT = "<0.7"
+DataFrames = "<0.20, 0.21"
+MAT = "<0.7, 0.8"
 Quaternions = "<0.5"
-RecipesBase = "<0.8"
+RecipesBase = "<0.8, 1"
 StaticArrays = "<0.13"
-StatsBase = "<0.33"
+StatsBase = "<0.33, 0.33"
 TotalLeastSquares = "1.0"
 julia = "1.0"
 Requires = "1.0"
