--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,10 @@
 name = "Robotlib"
 uuid = "a75dfa10-1339-53f3-8748-4d618c3d76af"
 authors = ["baggepinnen <baggepinnen@gmail.com>"]
-version = "0.4.0"
+version = "0.4.1"
 
 [deps]
-DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 Quaternions = "94ee1d12-ae83-5a48-8b1c-48b8ff168ae0"
@@ -19,19 +19,17 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TotalLeastSquares = "028f657a-7ace-5159-a694-8cfd97933b0c"
 
 [compat]
-DataFrames = "<0.20, 0.21"
 MAT = "<0.7, 0.8"
 Quaternions = "<0.5"
 RecipesBase = "<0.8, 1"
+Requires = "1.0"
 StaticArrays = "<0.13"
 StatsBase = "<0.33, 0.33"
 TotalLeastSquares = "1.0"
 julia = "1.0"
-Requires = "1.0"
 
 [extras]
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
-
 
 [targets]
 test = ["Plots"]
