--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Robotlib"
 uuid = "a75dfa10-1339-53f3-8748-4d618c3d76af"
 authors = ["baggepinnen <baggepinnen@gmail.com>"]
-version = "1.1.9"
+version = "1.1.10"
 
 [deps]
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
@@ -19,7 +19,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TotalLeastSquares = "028f657a-7ace-5159-a694-8cfd97933b0c"
 
 [compat]
-Optim = "1.3"
+Optim = "1.2, 1.3"
 Quaternions = "<0.5"
 RecipesBase = "<0.8, 1"
 Requires = "1.0"
