--- a/Project.toml
+++ b/Project.toml
@@ -20,7 +20,7 @@ TotalLeastSquares = "028f657a-7ace-5159-a694-8cfd97933b0c"
 
 [compat]
 Optim = "1.2, 1.3"
-Quaternions = "<0.5, 0.5"
+Quaternions = "<0.5, 0.5, 0.6"
 RecipesBase = "<0.8, 1"
 Requires = "1.0"
 StaticArrays = "<0.13, 1.0"
