--- a/Project.toml
+++ b/Project.toml
@@ -24,7 +24,7 @@ Quaternions = "<0.5, 0.5, 0.6"
 RecipesBase = "<0.8, 1"
 Requires = "1.0"
 StaticArrays = "<0.13, 1.0"
-StatsBase = "<0.33, 0.33"
+StatsBase = "<0.33, 0.33, 0.34"
 TotalLeastSquares = "1.0"
 julia = "1.5"
 
