--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TotalLeastSquares = "028f657a-7ace-5159-a694-8cfd97933b0c"
 
 [compat]
+DelimitedFiles = "1"
 Optim = "1.2, 1.3"
 Quaternions = "<0.5, 0.5, 0.6"
 RecipesBase = "<0.8, 1"
