--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ Quaternions = "<0.5, 0.5, 0.6"
 RecipesBase = "<0.8, 1"
 Requires = "1.0"
 StaticArrays = "<0.13, 1.0"
+Statistics = "1"
 StatsBase = "<0.33, 0.33"
 TotalLeastSquares = "1.0"
 julia = "1.5"
